// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`propertystatement multiple (var) 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "dsn",
              },
              "value": null,
            },
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "username",
              },
              "value": null,
            },
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "password",
              },
              "value": null,
            },
          ],
          "visibility": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`propertystatement multiple 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "dsn",
              },
              "value": null,
            },
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "username",
              },
              "value": null,
            },
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "password",
              },
              "value": null,
            },
          ],
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`propertystatement simple (var) 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "dsn",
              },
              "value": null,
            },
          ],
          "visibility": null,
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`propertystatement simple 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "dsn",
              },
              "value": null,
            },
          ],
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
